packages/core-components/src/components/custom-dropdown/custom-dropdown.scss
@use '../../global/b2b-styles';

:host {
  display: inline-block;
  position: relative;
  width: auto;
}

.b2b-custom-dropdown__trigger {
  position: relative;
  display: inline !important;
  cursor: pointer;
}

.b2b-custom-dropdown {
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 1000;
  inline-size: var(--b2b-dropdown-width, 300px);
  display: none;

  &--on {
    display: block;
  }

  &--drop-shadow {
    box-shadow: 0 0 5px rgb(0 0 0 / 20%);
  }

  &--border {
    border: 1px solid var(--b2b-color-grey-200);
  }
}

.b2b-custom-dropdown-search {
  padding: var(--b2b-size-30);
  display: none;

  &--enabled {
    display: block;
    border-bottom: var(--b2b-size-1) solid var(--b2b-color-border-100);
  }
}

.b2b-custom-dropdown__options-scroll-container {
  position: relative;
  display: block;
  max-height: calc(6 * 48px);
  overflow-y: auto;
  margin: 0;
}

.b2b-custom-dropdown__options-container {
  position: relative;
  display: block;
  margin: 0;

  &--disabled {
    display: none;
  }
}

.b2b-custom-dropdown__option--hidden {
  display: none;
}

::slotted(b2b-custom-dropdown-option.b2b-custom-dropdown__option--hidden) {
  display: none;
}

.b2b-custom-dropdown__empty {
  padding: var(--b2b-size-30);
  color: var(--b2b-color-grey-400);
  font-size: var(--b2b-size-copy-100);
  background-color: var(--b2b-color-white-100);
}

